refactor: Externalize table names to env and query to ignored file

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ DESTINO_DBNAME=
 DESTINO_USER=
 DESTINO_PASSWORD=
 DESTINO_PORT=
+
+# Nomes das tabelas (exemplo)
+ORIGEM_TABLE_NAME="schema.tabela_origem"
+DESTINO_TABLE_NAME="tabela_historico"
